--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
